# AzureFox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SECURITY.md  pyproject.toml
.githooks/: pre-push
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  dependency-sanity.yml  release.yml
azurefox-references/repo-internal-notes/: all-checks-closeout-2026-04-11.md  workload-identity-path-reentry-checkpoint-2026-04-11.md
azurefox-references/tasklists/: README.md  compute-control-boundary-tasklist-2026-04-11.md  deferred-platform-and-impact-tasklist-2026-04-11.md  phase-closeout-tasklist-2026-04-11.md
command-output/: README.md
command-output/acr/: output.json  table.txt
command-output/aks/: output.json  table.txt
command-output/api-mgmt/: output.json  table.txt
command-output/app-services/: table.txt
command-output/application-gateway/: output.json  table.txt
command-output/arm-deployments/: output.json  table.txt
command-output/auth-policies/: output.json  table.txt
command-output/automation/: table.txt
command-output/cross-tenant/: output.json  table.txt
command-output/databases/: output.json  table.txt
command-output/devops/: output.json  table.txt
command-output/dns/: output.json  table.txt
command-output/endpoints/: output.json  table.txt
command-output/env-vars/: output.json  table.txt
command-output/functions/: table.txt
command-output/inventory/: output.json  table.txt
command-output/keyvault/: output.json  table.txt
command-output/lighthouse/: output.json  table.txt
command-output/managed-identities/: output.json  table.txt
command-output/network-effective/: output.json  table.txt
command-output/network-ports/: table.txt
command-output/nics/: table.txt
command-output/permissions/: output.json  table.txt
command-output/principals/: output.json  table.txt
command-output/privesc/: table.txt
command-output/rbac/: output.json  table.txt
command-output/resource-trusts/: output.json  table.txt
command-output/role-trusts/: output.json  table.txt
command-output/snapshots-disks/: output.json  table.txt
command-output/storage/: output.json  table.txt
command-output/tokens-credentials/: output.json  table.txt
command-output/vms/: output.json  table.txt
command-output/vmss/: output.json  table.txt
command-output/whoami/: output.json  table.txt
command-output/workloads/: output.json  table.txt
docs/: cloudfox-compatibility-ledger.md  feature-complete-checklist.md  future-phase-candidates.md  output-contracts.md  release-process.md  roadmap.md
docs/api-mapping/: acr.md  aks.md  api-mgmt.md  app-services.md  auth-policies.md  databases.md  dns.md  env-vars.md  functions.md  inventory.md  managed-identities.md  principals.md  rbac.md  resource-trusts.md  role-trusts.md  storage.md  tokens-credentials.md  vms.md  whoami.md
docs/wiki-seed/: Getting-Started.md  Home.md  README.md  Running-Against-The-Proof-Lab.md  Understanding-Output.md  _Sidebar.md
schemas/: acr.schema.json  aks.schema.json  api-mgmt.schema.json  app-services.schema.json  application-gateway.schema.json  arm-deployments.schema.json  auth-policies.schema.json  automation.schema.json  chains.schema.json  cross-tenant.schema.json  databases.schema.json  devops.schema.json  dns.schema.json  endpoints.schema.json  env-vars.schema.json  functions.schema.json  inventory.schema.json  keyvault.schema.json  lighthouse.schema.json  managed-identities.schema.json  network-effective.schema.json  network-ports.schema.json  nics.schema.json  permissions.schema.json  principals.schema.json  privesc.schema.json  rbac.schema.json  resource-trusts.schema.json  role-trusts.schema.json  snapshots-disks.schema.json  storage.schema.json  tokens-credentials.schema.json  vms.schema.json  vmss.schema.json  whoami.schema.json  workloads.schema.json
scripts/: generate_command_output_examples.py  generate_golden_outputs.py  generate_schemas.py  setup_local_guardrails.sh  validate_publish_metadata.py
src/azurefox/: __init__.py  __main__.py  cli.py  config.py  devops_hints.py  env_var_hints.py  errors.py  escalation_hints.py  help.py  managed_identity_hints.py  permissions_hints.py  privesc_hints.py  registry.py  role_trust_hints.py  scope_hints.py  target_matching.py  tokens_credential_hints.py
tests/: conftest.py  test_auth_session.py  test_chain_scaffold.py  test_chain_semantics.py  test_cli_smoke.py  test_clients_factory.py  test_collectors.py  test_command_output_examples.py  test_compute_control.py  test_contract_schemas.py  test_correlation.py  test_credential_path_registry.py  test_deployment_path_admissibility.py  test_errors.py  test_golden_outputs.py  test_graph_client.py  test_help.py  test_integration_lab_tenant.py  test_models.py  test_output_writer.py  test_publish_metadata.py  test_terminal_ux.py  test_visibility_tiers.py  truthfulness.py
tests/golden/: acr.json  aks.json  api-mgmt.json  app-services.json  application-gateway.json  arm-deployments.json  auth-policies.json  automation.json  container-apps.json  (+28 more)
wiki/: README.md
(+87 files in other folders)
