[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azurefox"
version = "1.0.0"
description = "AzureFox - offensive-focused Azure situational awareness CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "AzureFox Contributors" }]
dependencies = [
  "pydantic>=2.8,<3",
  "typer>=0.12,<1",
  "rich>=13.7,<15",
  "azure-identity>=1.17,<2",
  "azure-mgmt-resource>=23.1,<24",
  "azure-mgmt-authorization>=4.0,<5",
  "azure-mgmt-keyvault>=10.3,<11",
  "azure-mgmt-storage>=21.2,<22",
  "azure-mgmt-compute>=33.0,<34",
  "azure-mgmt-network>=26.0,<31",
  "azure-mgmt-sql>=3.0,<4",
  "azure-mgmt-postgresqlflexibleservers>=1.0,<2",
  "azure-mgmt-mysqlflexibleservers>=1.0,<2",
  "azure-mgmt-web>=7.3,<8",
  "azure-mgmt-apimanagement>=5.0,<6",
  "azure-mgmt-containerregistry>=13.0,<14",
  "azure-mgmt-containerservice>=31.0,<32",
  "certifi>=2024.2,<2027",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=5.0,<6",
  "ruff>=0.6,<1",
  "mypy>=1.11,<2",
]

[project.scripts]
azurefox = "azurefox.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "integration: tests that require a real Azure lab tenant",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
