[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azurefox"
version = "1.5.0"
description = "AzureFox - offensive-focused Azure situational awareness CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "AzureFox Contributors" }]
dependencies = [
  "pydantic>=2.8,<3",
  "typer>=0.12,<1",
  "rich>=13.7,<15",
  "azure-identity>=1.17,<2",
  "azure-keyvault-secrets>=4.9,<5",
  "azure-mgmt-resource>=23.1,<26",
  "azure-mgmt-resource-deployments>=1.0.0b1,<2",
  "azure-mgmt-resource-subscriptions>=1.0.0b1,<2",
  "azure-mgmt-authorization>=4.0,<5",
  "azure-mgmt-keyvault>=10.3,<11",
  "azure-mgmt-storage>=21.2,<22",
  "azure-mgmt-compute>=33.0,<34",
  "azure-mgmt-network>=26.0,<31",
  "azure-mgmt-sql>=3.0,<4",
  "azure-mgmt-postgresqlflexibleservers>=1.0,<2",
  "azure-mgmt-mysqlflexibleservers>=1.0,<2",
  "azure-mgmt-web>=7.3,<11",
  "azure-mgmt-apimanagement>=5.0,<6",
  "azure-mgmt-automation>=1.0,<2",
  "azure-mgmt-containerregistry>=13.0,<14",
  "azure-mgmt-containerservice>=31.0,<32",
  "certifi>=2024.2,<2027",
  "PyYAML>=6.0,<7",
  "six>=1.16,<2",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "pytest>=8.3,<10",
  "pytest-cov>=5.0,<8",
  "ruff>=0.6,<1",
  "mypy>=1.11,<2",
]

[project.scripts]
azurefox = "azurefox.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "integration: tests that require a real Azure lab tenant",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
